# DGD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  世界事件.txt  奥斯曼帝国.txt  德属东亚.txt  德属非洲.txt  德意志帝国.txt  美利坚合众国.txt
descriptions/events/: 世界事件.txt  中华民国.txt  乌克兰.txt  乌拉圭.txt  内志.txt  加拿大自治领.txt  南非联邦.txt  厄瓜多尔.txt  古巴共和国.txt  哥斯达黎加.txt  墨西哥合众国.txt  多米尼加.txt  奥匈帝国.txt  奥斯曼帝国.txt  委内瑞拉.txt  尼德兰王国.txt  巴拉圭.txt  巴拿马.txt  巴西.txt  德属东亚.txt  德属非洲.txt  德意志帝国.txt  意大利王国.txt  新西兰联邦.txt  日本帝国.txt  暹罗王国.txt  比利时王国.txt  法兰西共和国.txt  波兰.txt  波斯帝国.txt  波罗的海联合省.txt  海地.txt  澳大利亚领地.txt  爱尔兰共和国.txt  玻利维亚.txt  白鲁塞尼亚.txt  秘鲁.txt  罗马尼亚.txt  美利坚合众国.txt  联合王国.txt  (+14 more)
descriptions/system/: basic.md  character parameters.md  region parameters.md  world parameters.md
include/: conf.h  display.h  errors.h  sprite.h
src/: conf.cpp  display.cpp  errors.cpp  sprite.cpp
